# Project-Optima

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: __init__.py
backend/agent/: __init__.py  demo_runtime.py  graph.py  runtime.py  state.py
backend/agent/nodes/: __init__.py  execution.py  finalize.py  guardrail.py  intent.py  market_context.py  memory.py  portfolio.py  regime.py  sentiment.py  trust_context.py  validator.py
backend/config/: settings.py
backend/core/: __init__.py  circuit_breaker.py  constants.py  exceptions.py  logger.py  rate_limiter.py  retry.py
backend/data/: checkpoints.py  models.py  postgres.py  qdrant.py
backend/integrations/: __init__.py  groq_client.py  kraken_cli.py  kraken_rest.py
backend/prompts/: xml_wrapper.py
backend/validation/: guardrails.py  normalizers.py  parsers.py  schemas.py
frontend/app/: app.js  index.html  raw.html  raw.js  styles.css
security/: __init__.py  erc8004_registry.py  guardrails.yaml  policy.py  secrets.py  tee_attestation.py  tee_attestation.sh
