[project]
name = "rra-trading-swarm"
version = "0.1.0"
description = "Reflexive Reputation Arb trading swarm"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "python-dotenv>=1.1.0",
  "orjson>=3.11.0",
  "structlog>=25.0.0",
  "tenacity>=9.1.0",
  "httpx>=0.28.0",
  "langgraph>=0.6.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "langchain-core>=0.3.0",
  "langchain-groq>=0.3.0",
  "groq>=0.31.0",
  "web3>=7.12.0",
  "eth-account>=0.13.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0",
  "mypy>=1.17.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
